--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 MONGO_URI="mongodb+srv://spandan:spandan1234@cluster0.3cnzz.mongodb.net/fileshare?retryWrites=true&w=majority"
+APP_BASE_URL=http://localhost:3000
+
+SMTP_HOST=smtp-relay.sendinblue.com
+SMTP_PORT=587
+MAIL_USER=joshispandan769@gmail.com
+MAIL_PASSWORD=n467CvE38I5NcRWT
