--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.5"
+    "mongoose": "^5.11.5",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.16",
+    "uuid": "^8.3.1"
   }
 }
