--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon start"
+    "start": "node start",
+    "run": "nodemon start"
   },
   "author": "spandan joshi",
   "license": "MIT",
